# simple-http-server

./: Cargo.toml  products.json
src/: main.rs
