[package]
name = "simple-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = []}
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"